src/specification/markdown/snapshots/duvet__specification__markdown__tests__multi_line_header__tokens.snap
---
source: src/specification/markdown/tests.rs
expression: "super::tokens(r#\"\nFoo *bar\nbaz*\n======\n\nContent goes here. Another\nsentence here.\n\"#)"
---
[
    Line(
        Str {
            value: "",
            pos: 0,
            line: 1,
        },
    ),
    Header {
        line: Str {
            value: "Foo *bar\nbaz*",
            pos: 1,
            line: 2,
        },
        name: Str {
            value: "Foo *bar\nbaz*",
            pos: 1,
            line: 2,
        },
        fragment: None,
        level: 1,
    },
    Line(
        Str {
            value: "",
            pos: 22,
            line: 5,
        },
    ),
    Line(
        Str {
            value: "Content goes here. Another",
            pos: 23,
            line: 6,
        },
    ),
    Line(
        Str {
            value: "sentence here.",
            pos: 50,
            line: 7,
        },
    ),
]
